[package]
name = "bootloader"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = { version = "0.0.0", path = "../libs/acpi" }
alloc = { path = "../libs/alloc" }
bootloader_api = { path = "../bootloader_api" }
common = { path = "../libs/common" }
serial = { path = "../libs/serial" }
stack_vec = { path = "../libs/stack_vec" }
uefi = { path = "../libs/uefi" }
x86_64 = { path = "../libs/arch/x86_64" }
